Polish and improve the rank profile features: - it is now possible to get row/col rank profiles from either LUdivine or PLUQ - new extractor for the rank profiles of a leading submatrix, from the permutations matrices only - new test-suite

--- a/fflas-ffpack/ffpack/Makefile.am
+++ b/fflas-ffpack/ffpack/Makefile.am
@@ -47,6 +47,7 @@ pkgincludesub_HEADERS=        \
 		ffpack_fgetrs.inl\
 		ffpack_permutation.inl\
 		ffpack_ftrtr.inl\
+		ffpack_rankprofiles.inl\
 		$(multiprecision)
 
 
