Fixed Makefile issue

--- a/fflas-ffpack/field/Makefile.am
+++ b/fflas-ffpack/field/Makefile.am
@@ -30,7 +30,7 @@ RNS=rns.h			        \
 	rns-double-elt.h		\
 	rns-double.inl			\
 	rns-integer.h			\
-	rns-integer-mod.inl     \
+	rns-integer-mod.h     \
 	modular-extended.h
 
 pkgincludesub_HEADERS=          	\
