create folder PALADIn for all DSL macros and routines + update Makefiles

--- a/configure.ac
+++ b/configure.ac
@@ -337,6 +337,7 @@ fflas-ffpack/fflas/fflas_simd/Makefile
 fflas-ffpack/ffpack/Makefile
 fflas-ffpack/field/Makefile
 fflas-ffpack/utils/Makefile
+fflas-ffpack/PALADIn/Makefile
 doc/Makefile
 tests/Makefile
 tests/data/Makefile
