Fixed export folder for paladin

--- a/fflas-ffpack/paladin/Makefile.am
+++ b/fflas-ffpack/paladin/Makefile.am
@@ -18,7 +18,7 @@
 # ========LICENCE========
 
 
-pkgincludesubdir=$(pkgincludedir)/PALADIn
+pkgincludesubdir=$(pkgincludedir)/paladin
 
 
 pkgincludesub_HEADERS= 	\
