--- a/Makefile.am
+++ b/Makefile.am
@@ -70,6 +70,10 @@ uninstall-hook:
 
 bin_SCRIPTS=fflas-ffpack-config
 
+git:
+	git commit -a; git pull; git push
+
 VERSION=2.1.0
 
 #  EXTRA_DIST=incremente-versions
+
