add C interface (non PAR_REGION'ed, non sparse) and mini test ; fix a few bugs along

--- a/configure.ac
+++ b/configure.ac
@@ -343,6 +343,8 @@ tests/Makefile
 tests/data/Makefile
 benchmarks/Makefile
 optimiser/Makefile
+interfaces/Makefile
+interfaces/libs/Makefile
 ])
 AC_OUTPUT
 
