Update the compiled interface: Add the auto-template specialization file, used for the compiled libs.

--- a/interfaces/libs/Makefile.am
+++ b/interfaces/libs/Makefile.am
@@ -29,7 +29,8 @@ AM_LDFLAGS=-static
 
 
 pkgincludesub_HEADERS=fflas_c.h  \
-		      ffpack_c.h
+		      ffpack_c.h \
+		      ffpack_compiled_spec.inl
 
 lib_LTLIBRARIES=libfflas_c.la \
 		libffpack_c.la
