New compiled library for ffpack - compilation of C++ instantiations directly - macro machinery to automatically generate all instantiations and declarations - need to be done for FFLAS as well - and hooked from fflas_c and ffpack_c libs

--- a/interfaces/libs/Makefile.am
+++ b/interfaces/libs/Makefile.am
@@ -30,10 +30,12 @@ AM_LDFLAGS=-static
 
 pkgincludesub_HEADERS=fflas_c.h  \
 		      ffpack_c.h \
-		      ffpack_compiled_spec.inl
+		      ffpack_inst.h \
+		      ffpack_inst_implem.inl
 
 lib_LTLIBRARIES=libfflas_c.la \
-		libffpack_c.la
+		libffpack_c.la \
+		libffpack.la
 
 libfflas_c_la_SOURCES=fflas_lvl1.C \
 		    fflas_lvl2.C \
@@ -42,8 +44,14 @@ libfflas_c_la_SOURCES=fflas_lvl1.C \
 
 libffpack_c_la_SOURCES=ffpack.C
 
+libffpack_la_SOURCES=ffpack_inst.C \
+		     ffpack_inst_implem.inl
+
 libffpack_c_la_LDFLAGS= -version-info 1:0:0
-libffpack_c_la_LDFLAGS=  \
+libffpack_c_la_LDFLAGS+=  \
+		       -no-undefined
+libffpack_la_LDFLAGS= -version-info 1:0:0
+libffpack_la_LDFLAGS+=  \
 		       -no-undefined
 
 libfflas_c_la_LDFLAGS= -version-info 1:0:0
