--- a/fflas-ffpack.pc.in
+++ b/fflas-ffpack.pc.in
@@ -1,14 +1,14 @@
 /------------------ fflas-ffpack.pc ------------------------
 prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@
+exec_prefix=@prefix@/bin
+libdir=@prefix@/lib
+includedir=@prefix@/include
 
 Name: fflas-ffpack
 Description: Finite Field Linear Algebra Suroutines/Package>
 URL: http://linbox-team.github.io/fflas-ffpack/
 Version: @VERSION@
 Requires: givaro, BLAS
-Libs: 
-Cflags: @DEFAULT_CFLAGS@ @CXXFLAGS@ @AVXFLAGS@ @OMPFLAGS@
+Libs: @PRECOMPILE_LIBS@
+Cflags: @DEFAULT_CFLAGS@ @CXXFLAGS@ @AVXFLAGS@ @OMPFLAGS@ @PRECOMPILE_FLAGS@
 \-------------------------------------------------------
