--- a/fflas-ffpack.pc.in
+++ b/fflas-ffpack.pc.in
@@ -5,7 +5,7 @@ libdir=@prefix@/lib
 includedir=@prefix@/include
 
 Name: fflas-ffpack
-Description: Finite Field Linear Algebra Suroutines/Package>
+Description: Finite Field Linear Algebra Suroutines/Package
 URL: http://linbox-team.github.io/fflas-ffpack/
 Version: @VERSION@
 Requires: givaro, BLAS
