Add fflas_pfinit to build

--- a/fflas-ffpack/paladin/Makefile.am
+++ b/fflas-ffpack/paladin/Makefile.am
@@ -21,11 +21,8 @@
 pkgincludesubdir=$(pkgincludedir)/paladin
 
 
-pkgincludesub_HEADERS= 	\
+pkgincludesub_HEADERS= fflas_pfinit.h	\
 	blockcuts.inl  \
 	pfgemm_variants.inl \
 	parallel.h  \
 	kaapi_routines.inl
-
-
-
