added one example

--- a/configure.ac
+++ b/configure.ac
@@ -347,6 +347,7 @@ doc/Makefile
 tests/Makefile
 tests/data/Makefile
 benchmarks/Makefile
+examples/Makefile
 optimiser/Makefile
 fflas-ffpack.pc
 ])
