--- a/fflas-ffpack-config.in
+++ b/fflas-ffpack-config.in
@@ -1,4 +1,4 @@
-#! /bin/bash
+#!/usr/bin/env bash
 # Coypright (c) 2011 FFLAS-FFPACK
 # written by Brice Boyer (briceboyer) <boyer.brice@gmail.com>
 # adapted from LinBox configuration
