--- a/Makefile.am
+++ b/Makefile.am
@@ -77,7 +77,7 @@ bin_SCRIPTS=fflas-ffpack-config
 git:
 	git commit -a; git pull; git push
 
-VERSION=2.2.0rc1
+VERSION=2.2.0
 
 #  EXTRA_DIST=incremente-versions
 
