fix LD_RUN_PATH handling

--- a/configure.ac
+++ b/configure.ac
@@ -159,7 +159,8 @@ TESTS_CFLAGS="${TESTS_CFLAGS} ${WARN_CFLAGS} #${DEBUG_CFLAGS}"
 
 AC_HEADER_STDC
 AC_PROG_LIBTOOL
-
+AC_PROG_EGREP
+AC_PROG_SED
 # newer libtool...
 LT_PREREQ([2.2])
 LT_INIT
