--- a/benchmarks/Makefile.am
+++ b/benchmarks/Makefile.am
@@ -31,7 +31,7 @@ AM_LDFLAGS=-static $(PARLIBS)
 
 PERFPUBLISHERFILE=benchmarks-report.xml
 
-FFLA_BENCH =    benchmark-fgemm benchmark-wino benchmark-ftrsm  benchmark-ftrtri  benchmark-inverse  benchmark-lqup benchmark-pluq benchmark-charpoly benchmark-fgemm-mp benchmark-ftrsm-mp benchmark-lqup-mp
+FFLA_BENCH =    benchmark-fgemm benchmark-wino benchmark-ftrsm  benchmark-ftrtri  benchmark-inverse  benchmark-lqup benchmark-pluq benchmark-charpoly benchmark-fgemm-mp benchmark-fgemv-mp benchmark-ftrsm-mp benchmark-lqup-mp
 BLAS_BENCH =    benchmark-sgemm$(EXEEXT) benchmark-dgemm benchmark-dtrsm
 LAPA_BENCH =    benchmark-dtrtri benchmark-dgetri benchmark-dgetrf
 
@@ -59,6 +59,7 @@ benchmark_dtrsm_SOURCES = benchmark-dtrsm.C
 
 benchmark_fgemm_SOURCES = benchmark-fgemm.C
 benchmark_fgemm_mp_SOURCES = benchmark-fgemm-mp.C
+benchmark_fgemv_mp_SOURCES = benchmark-fgemv-mp.C
 benchmark_wino_SOURCES = benchmark-wino.C
 benchmark_ftrsm_SOURCES = benchmark-ftrsm.C
 benchmark_ftrsm_mp_SOURCES = benchmark-ftrsm-mp.C
