--- a/fflas-ffpack.pc.in
+++ b/fflas-ffpack.pc.in
@@ -8,7 +8,7 @@ Name: fflas-ffpack
 Description: Finite Field Linear Algebra Suroutines/Package
 URL: http://linbox-team.github.io/fflas-ffpack/
 Version: @VERSION@
-Requires: givaro
+Requires: givaro >= 4.0.1
 Libs: @PRECOMPILE_LIBS@
 Cflags: @DEFAULT_CFLAGS@ @CXXFLAGS@ @AVXFLAGS@ @OMPFLAGS@ @PRECOMPILE_FLAGS@
 \-------------------------------------------------------
