added PLUQ check to PLUQ and LUdivine in ffpack_pluq.inl and ffpack_ludivine.inl added a test for PLUQ check --> tests/test-pluq_check.C added class rnsRandIter in field/rns-double.h added RandIter typedef in RNSIntegerMod class

--- a/fflas-ffpack/ffpack/Makefile.am
+++ b/fflas-ffpack/ffpack/Makefile.am
@@ -48,6 +48,7 @@ pkgincludesub_HEADERS=        \
 		ffpack_permutation.inl\
 		ffpack_ftrtr.inl\
 		ffpack_rankprofiles.inl\
+		ffpack_pluq_check.inl\
 		$(multiprecision)
 
 
