--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -29,9 +29,11 @@ AM_CPPFLAGS +=  $(CBLAS_FLAG) $(GIVARO_CFLAGS) $(OPTFLAGS) -I$(top_srcdir)/fflas
 LDADD = $(CBLAS_LIBS) $(GIVARO_LIBS) $(CUDA_LIBS)
 AM_LDFLAGS=-static $(PARLIBS)
 
-FFLA_EXAMP =    2x2-fgemm pluq
+FFLA_EXAMP =    2x2-fgemm pluq 101-fgemm 2x2-pluq
 2x2_fgemm_SOURCES = 2x2-fgemm.C
 pluq_SOURCES = pluq.C
+101_fgemm_SOURCES = 101-fgemm.C
+2x2_pluq_SOURCES = 2x2-pluq.C
 
 if FFLASFFPACK_HAVE_LAPACK
 USE_LAPACK_EXAMP = $(LAPA_EXAMP)
