--- a/fflas-ffpack.pc.in
+++ b/fflas-ffpack.pc.in
@@ -1,6 +1,6 @@
 /------------------ fflas-ffpack.pc ------------------------
 prefix=@prefix@
-exec_prefix=@prefix@/bin
+exec_prefix=@prefix@
 libdir=@prefix@/lib
 includedir=@prefix@/include
 
