use the std GNU ax_check_x86_feature macro to detect all SIMD options.

--- a/configure.ac
+++ b/configure.ac
@@ -175,8 +175,9 @@ echo "-----------------------------------------------"
 FF_CHECK_OMP
 
 # TODO do FF_CHECK_SIMD and take best, define USE_SSE2/AVX/AVX2/... and have also __FFLASFFPACK_USE_SIMD
-FF_CHECK_SSE
-FF_CHECK_AVX
+#FF_CHECK_SSE
+#FF_CHECK_AVX
+AX_CHECK_X86_FEATURES[][]
 
 AVXFLAGS="${SSEFLAGS} ${AVXFLAGS}"
 
