--- a/configure.ac
+++ b/configure.ac
@@ -177,9 +177,8 @@ FF_CHECK_OMP
 # TODO do FF_CHECK_SIMD and take best, define USE_SSE2/AVX/AVX2/... and have also __FFLASFFPACK_USE_SIMD
 #FF_CHECK_SSE
 #FF_CHECK_AVX
-if test "x$CCNAM" = "xgcc" ; then
-
-AX_CHECK_X86_FEATURES[][]
+if test "x$CCNAM" = "xgcc48" ; then
+   AX_CHECK_X86_FEATURES[][]
 else
 	FF_CHECK_SSE
 	FF_CHECK_AVX
