add 32 bit support

--- a/configure.ac
+++ b/configure.ac
@@ -189,6 +189,10 @@ fi
 dnl echo "CCNAM = $CCNAM $CUSTOM_SIMD"
 AVXFLAGS="${SSEFLAGS} ${AVXFLAGS} $X86_FEATURE_CFLAGS"
 
+dnl With GCC's default ABI version, a __m128 or __m256 are the same types and therefore we cannot
+dnl have overloads for both types without linking error.
+AS_IF([test "x$CCNAM" = "xgcc48"],[AVXFLAGS="${AVXFLAGS} -fabi-version=6"],[])
+
 
 PARFLAGS="${AVXFLAGS} ${OMPFLAGS}"
 PARLIBS="${OMPFLAGS}"
